--- a/memorious/templates/home.html
+++ b/memorious/templates/home.html
@@ -3,5 +3,16 @@
 {% block title %}Look up people and companies{% endblock %}
 
 {% block content %}
-  home test
+  <div class="row">
+    <div class="col-md-3"></div>
+    <div class="col-md-9">
+      <p>
+        This is an experimental search service for structured corporate and
+        property records at OCCRP.
+      </p>
+      <p>
+        Kindly direct your comments to <strong>tech@occrp.org</strong>.
+      </p>
+    </div>
+  </div>
 {% endblock %}
