Implement filters for facets.

--- a/memorious/templates/macros.html
+++ b/memorious/templates/macros.html
@@ -21,16 +21,22 @@
 {% endmacro %}
 
 {% macro facet(query, facet) %}
-  <table class="table table-condensed">
+  <table class="table table-condensed table-facets">
     <tr>
       <th colspan="2">
         {{facet.label}}
       </th>
     </tr>
     {% for bucket in facet.buckets %}
-      <tr>
-        <td>{{bucket.label}}</td>
-        <td class="numeric">{{bucket.count}}</td>
+      <tr class="{% if query.has_param(facet.field, bucket.key) %}active{% endif %}">
+        <td>
+          <a href="{{ query.toggle_param(facet.field, bucket.key) }}">
+            {{bucket.label}}
+          </a>
+        </td>
+        <td class="numeric">
+          {{bucket.count | intcomma}}
+        </td>
       </tr>
     {% endfor %}
   </table>
