Support OAuth login.

--- a/memorious/templates/search.html
+++ b/memorious/templates/search.html
@@ -16,7 +16,9 @@
         <table class="table table-condensed">
           {% for result in results %}
             <tr>
-              <td>{{result.schema.label}}</td>
+              <td width="15%">
+                {{result.schema.label}}
+              </td>
               <td>
                 <a href="{{url_for('base.entity', entity_id=result.id)}}">
                   {{result.properties.name}}
