--- a/memorious/templates/entity.html
+++ b/memorious/templates/entity.html
@@ -7,6 +7,8 @@
     <div class="col-md-3"></div>
     <div class="col-md-9">   
       {{entity.name}}
+
+      <pre>{{entity.data | tojson(indent=2)}}</pre>
     </div>
   </div>
 {% endblock %}
