show login status in footer.

--- a/memorious/templates/layout.html
+++ b/memorious/templates/layout.html
@@ -32,18 +32,6 @@
       </div>
     </div>
 
-    <footer>
-      <div class="container-fluid">
-        <div class="row">
-          <div class="col-md-12">
-            <p class="pull-right">
-              memorious &middot;
-              <i class="fa fa-github-square"></i>
-              <a href="https://github.com/occrp/memorious">source code</a>
-            </p>
-          </div>
-        </div>
-      </div>
-    </footer>
+    {% include "footer.html" with context %}
   </body>
 </html>
