--- a/memorious/static/style/main.scss
+++ b/memorious/static/style/main.scss
@@ -15,6 +15,7 @@ body {
 footer {
     color: $background-color;
     margin-top: 1em;
+    margin-bottom: 2em;
 
     a {
         color: $background-color;
