Country name formatting.

--- a/memorious/static/style/main.scss
+++ b/memorious/static/style/main.scss
@@ -34,6 +34,7 @@ footer {
     }
 }
 
+/* Search bar nav. */
 .main-nav {
     margin-top: 1em;
     margin-bottom: 1em;
@@ -45,6 +46,7 @@ footer {
     }
 }
 
+/* Search facets. */
 .table-facets {
     .active {
         font-weight: bold;
