--- a/memorious/templates/nav.html
+++ b/memorious/templates/nav.html
@@ -5,7 +5,8 @@
   </div>
   <div class="col-md-9">
     <form action="{{url_for('base.search')}}">
-      <input class="form-control" name="q" value="{{ query.text if query else '' }}"
+      <input class="form-control" name="{{ query.alias('q') if query else 'q' }}"
+             value="{{ query.text if query else '' }}"
              placeholder="Search all the data">
       {% if query is defined %}
         {% for arg, value in query.items %}
