Refactor the app structure a bit.

--- a/memorious/templates/footer.html
+++ b/memorious/templates/footer.html
@@ -13,7 +13,7 @@
       </div>
       <div class="col-md-6">
         <p class="pull-right">
-          memorious &middot;
+          pepsickle &middot;
           <i class="fa fa-github-square"></i>
           <a href="https://github.com/occrp/memorious">source code</a>
         </p>
