--- a/memorious/templates/search.html
+++ b/memorious/templates/search.html
@@ -21,7 +21,7 @@
               </td>
               <td>
                 <a href="{{url_for('base.entity', entity_id=result.id)}}">
-                  {{result.properties.name}}
+                  {{result.name}}
                 </a>
               </td>
               <td>
