--- a/memorious/templates/layout.html
+++ b/memorious/templates/layout.html
@@ -19,12 +19,12 @@
     {% assets "css" %}
       <link type="text/css" href="{{ ASSET_URL }}" rel="stylesheet">
     {% endassets %}
-    <link rel="shortcut icon" type="image/x-icon"
-      href="http://assets.pudo.org/img/favicon.ico">
+    <link rel="shortcut icon" type="image/x-icon" href="http://assets.pudo.org/img/favicon.ico">
 
     <base href="{{url_for('base.index')}}">
   </head>
   <body>
+
     <div id="page">
       <div class="container-fluid">
         {% include "nav.html" with context %}
@@ -33,5 +33,8 @@
     </div>
 
     {% include "footer.html" with context %}
+
+    <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
   </body>
 </html>
