--- a/memorious/templates/macros.html
+++ b/memorious/templates/macros.html
@@ -1,11 +1,3 @@
-{% macro header(title) %}
-  <div class="row header">
-    <div class="col-md-3"></div>
-    <div class="col-md-9">
-      <h2>{{title}}</h2>
-    </div>
-  </div>
-{% endmacro %}
 
 {% macro subheader(title) %}
   <div class="row subheader">
@@ -15,6 +7,14 @@
     </div>
   </div>
 {% endmacro %}
+
+
+{% macro entity_icon(schema) %}
+  <span data-toggle="tooltip" data-placement="bottom" title="{{schema.label}}">
+    <i class="fa fa-fw {{schema.icon}}"></i>
+  </span>
+{% endmacro %}
+
 
 {% macro pager(results) %}
   {% if results.pages > 1 %}
@@ -38,6 +38,7 @@
   {% endif %}
 {% endmacro %}
 
+
 {% macro facet(query, facet) %}
   {% if facet.buckets %}
     <table class="table table-condensed table-facets">
@@ -49,6 +50,10 @@
       {% for bucket in facet.buckets %}
         <tr class="{% if query.has_param(facet.field, bucket.key) %}active{% endif %}">
           <td>
+            {% if bucket.icon %}
+              <i class="fa fa-fw {{bucket.icon}}"></i>
+            {% endif %}
+
             <a href="{{ query.toggle_param(facet.field, bucket.key) }}">
               {{bucket.label}}
             </a>
